Change Log
==========

0.0.23 (05/24/2022)
-------------------
- First Release : Collect metadata from AWS Service,
  Supported Service Include: Lambda, API Gateway, Cloudwatch, SNS, Step Function, Cognito, EC2, Dynamo DB, S3
- Second Release: Fix some bug for dynamodb and add some new features like export to S3 bucket and write to dynamodb
- Third Release: Fix some bug when finding edge between API gateway and Lambda
- Fourth Release: Fix bug when finding edge between SNS to Lambda
- Fifth Release: Add some information in the service node ( Lambda, Dynamodb, SFN, APIgateway, Cognito)
- Sixth Release: Fix bug in step function prepare node
- Seventh Release: Fix specific bug in the step function where there is extra unwanted word
- Eight Release: Added new functionality used in initialize class
- Ninth Release: Fix some functionality used in initialize class
- Tenth Release: Modify some functionality in initialize class
- Eleventh Release: Modify the table name to write into dynamoDB
- Twelveth Release: Minor bug in updating item in prepare class
- Thirteenth Release: Bug Fix in updating item in prepare class
- Fourteenth Release: Fix Bug
- Fifteenth Release: Change timezone into Taipei Timezone
- Sixteenth Release: Automate Deployment to PYPI Testing
- Seventeenth Release: Added feature for getting credentials from S3 and prcessing requestID to dynamodb
- Eighteenth Release: Change the naming for certain AWS service and dynamodb arn structuring
- Nineteenth Release: Change the SNS naming and add status 'updating' into initialize class 
- Twentieth Release: Change some of credential gaining way in the system
- Twentiethone Release: Introduce new tag system in the data json file
- TwentyTwo Release: Fix bug in dynamodb tagging system
- TwentiethThird Release: Fix some tagging version output