@@ -33,6 +33,7 @@ def lambda_prepare_node(region, account_id, cytoscape_node_data):
                     "description": item['Description'],
                     "role": item['Role'],
                     "codesize": item['CodeSize'],
-                    "tag": lambda_tag
+                    "tag": lambda_tag,
+                    "cost_for_month": "0.03 USD",
                 }
             })
